Aggiunto modifiche anche qui

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Project</h1>
-    <p>Prima parte</p>
+    <h1>SECONDA BRANCH</h1>
+    <!-- CIAO -->
+    
 </body>
 </html>
